--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
  /* تضمين الخط الجديد ضمن الصفحة */
  
  @font-face {
-     font-family: ar-font;
+     font-family: "Font Awesome 5 Free";
      src: url(../founts/Cairo-Regular.ttf);
  }
  /* تعيين الخط الجديد كخط أساسي للصفحة وتحديد جهة الكتابة من اليمين إلى اليسار */
@@ -34,7 +34,7 @@
      background-color: rgba(239, 71, 58, 0.8);
      position: relative;
      z-index: -2;
-     margin-top: 90px;
+     padding-top: 50px;
  }
  
  section.banner .overlay .images {
